--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title                    : "Bnovkebin"
 title_separator          : "-"
 subtitle                 : "Be a good Hacker" # site tagline that appears below site title in masthead
 name                     : "Minkyun Sung"
-description              : "empty"
+description              : "Be a good Hacker"
 url                      : "https://bnovkebin.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : bnovkebin/bnovkebin.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -227,11 +227,11 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Seoul  # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Pagination with jekyll-paginate
-paginate: 5 # amount of posts to show
+paginate: 8 # amount of posts to show
 paginate_path: /page:num/
 
 # Pagination with jekyll-paginate-v2
@@ -324,4 +324,11 @@ defaults:
       related: true
       show_date: true
       enable_copy_code_button: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+
 
