--- a/_config.yml
+++ b/_config.yml
@@ -115,13 +115,13 @@ analytics:
 author:
   name             : "Minkyun Sung"
   avatar           : /assets/images/mypuppy.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "bnovkebin@gmail.com"
+  bio              : ""
   location         : "South Korea"
-  email            :
+  email            : "bnovkebin@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url : "@gmail.com"
+      url : "bnovkebin@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
