--- a/_config.yml
+++ b/_config.yml
@@ -115,9 +115,9 @@ analytics:
 author:
   name             : "Minkyun Sung"
   avatar           : /assets/images/mypuppy.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : ""
+  bio              : 
   location         : "South Korea"
-  email            : ""
+  email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
