--- a/_config.yml
+++ b/_config.yml
@@ -324,11 +324,11 @@ defaults:
       related: true
       show_date: true
       enable_copy_code_button: true
+      sidebar:
+        nav: "docs"
   # _pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
-
-
