--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Nosce Te Ipsum" 
+title                    : "Bnovkebin" 
 title_separator          : "-"
-subtitle                 :  # site tagline that appears below site title in masthead
+subtitle                 : "system hacker" # site tagline that appears below site title in masthead
 name                     : "Minkyun Sung"
 description              : "Be a good Hacker"
 url                      : "https://bnovkebin.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
