--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Nosce Te Ipsum" 
-title_separator          : ""
+title_separator          : 
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Minkyun Sung"
 description              : "Be a good Hacker"
