--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "bnovkebin" 
 title_separator          : "-"
-subtitle                 : "system hacker" # site tagline that appears below site title in masthead
+subtitle                 :  # site tagline that appears below site title in masthead
 name                     : "Minkyun Sung"
 description              : ""
 url                      : "https://bnovkebin.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
