--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "" 
-title_separator          : ""
-subtitle                 :  # site tagline that appears below site title in masthead
+title                    : "bnovkebin" 
+title_separator          : "-"
+subtitle                 : "system hacker" # site tagline that appears below site title in masthead
 name                     : "Minkyun Sung"
 description              : ""
 url                      : "https://bnovkebin.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -27,7 +27,7 @@ baseurl                  :  # the subpath of your site, e.g. "/blog"
 repository               : bnovkebin/bnovkebin.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "Bnovkebin" # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : " " # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
