--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "bnovkebin" 
-title_separator          : 
-subtitle                 :  # site tagline that appears below site title in masthead
+title_separator          : "|"
+subtitle                 : "system hacker" # site tagline that appears below site title in masthead
 name                     : "Minkyun Sung"
 description              : "Be a good hacker"
 url                      : "https://bnovkebin.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
