--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "system hacker" 
-title_separator          : "|"
+title                    : "bnovkebin" 
+title_separator          : "-"
 subtitle                 : "" # site tagline that appears below site title in masthead
 name                     : "Minkyun Sung"
 description              : "Be a good hacker"
