--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/bnovkebin"
+    - label: "velog"
+      icon: "fab fa-fw fa-link"
+      url: "https://velog.io/@bnovkebin/posts"
 
 # Site Footer
 footer:
